added animation according to swaps during merge sort and styling also

--- a/sorting_visualizer/src/SortingVisualizer/sortingVisualizer.css
+++ b/sorting_visualizer/src/SortingVisualizer/sortingVisualizer.css
@@ -12,7 +12,7 @@
 
 .array-bar {
   width: 2px;
-  background-color: chocolate;
+  background-color: forestgreen;
   display: inline-block;
   margin: 0 1px;
   flex: 1;
